<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--显示上方四个图标-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:drawableTop="@drawable/logo_sinaweibo"
            android:text="@string/share_wb"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:drawableTop="@drawable/logo_wechat"
            android:gravity="center"
            android:text="@string/share_wx"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:drawableTop="@drawable/logo_wechatmoments"
            android:gravity="center"
            android:text="@string/share_pyq"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:drawableTop="@drawable/logo_qq"
            android:gravity="center"
            android:text="@string/share_QQ"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>
 <Button
     android:id="@+id/shaer_cancel_btn"
     android:layout_marginTop="20dp"
     android:text="@string/cancel_not_do"
     android:textColor="@color/selector_gift_button_blue"
     android:background="@drawable/selector_gift_bule_button"
     android:layout_width="match_parent"
     android:layout_height="35dp" />

</LinearLayout>