<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!--搜索栏-->
    <RelativeLayout
        android:background="@color/WHITE"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_hight">
        <ImageView
            android:id="@+id/gift_user_head_iv"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_usercenter_avatar"/>
        <EditText
            android:hint="@string/profit_search_game"
            android:paddingLeft="10dp"
            android:background="@drawable/shape_input_background"
            android:id="@+id/gift_search"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@id/gift_user_head_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageView
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_input_search"
            android:id="@+id/gift_serachicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        style="@style/public_gray_horien_line">

    </View>

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="match_parent"
        android:layout_height="50dp"> 
        <Button
            android:id="@+id/profit_check_getPoint"
            android:text="@string/profit_check_qiandao"
            android:layout_margin="5dp"
            android:background="@drawable/selector_gift_bule_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/selector_gift_button_blue"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/profit_check_task"
            android:text="@string/profit_check_task"
            android:textColor="@color/selector_gift_button_blue"
            android:layout_margin="5dp"
            android:background="@drawable/selector_gift_bule_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/profit_check_score"
            android:text="@string/profit_check_socre"
            android:textColor="@color/selector_gift_button_blue"
            android:layout_margin="5dp"
            android:background="@drawable/selector_gift_bule_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        style="@style/public_gray_horien_line">

    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.example.jessihuang.gamedemo01.Other.widget.LoadMoreListView
            android:divider="@color/GRAY_WHITE"
            android:dividerHeight="0.5sp"
            android:id="@+id/profit_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.example.jessihuang.gamedemo01.Other.widget.LoadMoreListView>
    </LinearLayout>


</LinearLayout>