<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/profit_info_show"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
        <RelativeLayout
            android:background="@color/GRAY_WHITE"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_hight"
            >
            <ImageView
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:background="@drawable/selector_ttitle_back"
                android:id="@+id/title_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/title_tv"
                android:text="@string/profit_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:id="@+id/tilte_right_rl"
                android:layout_margin="10dp"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:clickable="true"
                    android:background="@drawable/selector_share"
                    android:id="@+id/title_share_iv"
                    android:layout_width="50sp"
                    android:layout_height="80sp" />
            </RelativeLayout>
        </RelativeLayout>

    <ImageView
        android:adjustViewBounds="true"
        android:src="@drawable/ic_launcher"
        android:scaleType="centerCrop"
        android:id="@+id/profit_large_img"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="100sp" />
    <LinearLayout
        android:orientation="vertical"

        android:layout_width="match_parent"
        android:layout_height="90sp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50sp">
            <ImageView
                android:layout_marginTop="2.5sp"
                android:id="@+id/profit_game_icon"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:background="@drawable/ic_launcher"
                android:layout_width="50sp"
                android:layout_height="50sp" />
            <LinearLayout

                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/profit_ganme_name"
                    android:layout_margin="2dp"
                    android:text="111"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RatingBar
                    android:id="@+id/profit_ratingbar"
                    style="?android:ratingBarStyleSmall"
                    android:numStars="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/profit_top_ver_info"
                        android:layout_marginLeft="3sp"
                        android:text="1111"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profit_top_game_size"
                        android:layout_marginLeft="3sp"
                        android:text="2222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profit_top_download_time"
                        android:layout_marginLeft="3sp"
                        android:text="2222"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="5dp"

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/profit_check_game_info"
                android:clickable="true"

                android:textColor="@color/selector_gift_button_blue"
                android:gravity="center"
                android:text="@string/profit_game_info"
                android:background="@drawable/selector_gift_bule_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/profit_check_gift"
                android:clickable="true"
                android:textColor="@color/selector_gift_button_blue"
                android:gravity="center"
                android:text="@string/profit_game_gift"
                android:background="@drawable/selector_gift_bule_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/profit_check_talk"
                android:clickable="true"
                android:textColor="@color/selector_gift_button_blue"
                android:text="@string/profit_talk"
                android:gravity="center"
                android:background="@drawable/selector_gift_bule_button"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <View
        style="@style/public_gray_horien_line">

    </View>
    <android.support.v4.view.ViewPager
        android:id="@+id/profit_viewpager_center"
        android:layout_height="330sp"
        android:layout_width="match_parent">

    </android.support.v4.view.ViewPager>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/profit_two_button"

                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/profit_info_commit"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:text="@string/profit_info_commit"
                    android:layout_width="0sp"
                    android:textColor="@color/selector_gift_button_blue"
                    android:background="@drawable/selector_gift_bule_button"
                    android:layout_height="30sp" />
                <Button
                    android:id="@+id/profit_info_download"
                    android:text="@string/profit_info_talk"
                    android:background="@drawable/selector_gift_bule_button"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:layout_width="0sp"
                    android:textColor="@color/selector_gift_button_blue"
                    android:layout_height="30sp" />
            </LinearLayout>
            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/profit_one_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/profit_info_publish_talk"
                    android:layout_margin="5sp"
                    android:text="@string/profit_publish_talk"
                    android:textColor="@color/selector_gift_button_blue"
                    android:background="@drawable/selector_gift_bule_button"
                    android:layout_width="match_parent"
                    android:layout_height="30sp" />
            </LinearLayout>
        </RelativeLayout>

</LinearLayout>
</RelativeLayout>